objects/DocumentTypeCharacteristic__c.object
<CustomObject>
    <fields>
        <fullName>Characteristic__c</fullName>
        <description>The characteristic used by the document type.</description>
        <inlineHelpText>The characteristic used by the document type.</inlineHelpText>
        <label>Characteristic</label>
        <referenceTo>Characteristic__c</referenceTo>
        <relationshipLabel>Document Type Characteristics</relationshipLabel>
        <relationshipName>DocumentTypeCharacteristics</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DocumentTypeCharacteristicEID__c</fullName>
        <description>The Enterprise ID of this record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID of this record.</inlineHelpText>
        <label>Document Type Characteristic EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <description>The document type applied to this characteristic.</description>
        <inlineHelpText>The document type applied to this characteristic.</inlineHelpText>
        <label>Document Type</label>
        <referenceTo>Documenttype__c</referenceTo>
        <relationshipLabel>Document Type Characteristics</relationshipLabel>
        <relationshipName>DocumentTypeCharacteristics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Document Type Characteristic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document Type Characteristic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Type Characteristics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>